<resources>
    <string name="app_name">OnderbroekAppv2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textViewOverzichtKledingstukken">Overzicht Kledingstukken</string>
    <string name="txtViewKledingNaam">Naam</string>
    <string name="txtViewPlaats">Plaats</string>
    <string name="txtViewKledingBeschrijving">Beschrijving</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_toonplaatsen">Toon Plaatsen</string>
    <string name="txtView_locatienaam">Locatienaam</string>
    <string name="txtView_xcoordinaat">x-coördinaat</string>
    <string name="txtView_ycoordinaat">Y Coördinaat</string>
</resources>
